# miniSQL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_en.md  development_logs.md  requirements.md  踩坑记录.md
.github/workflows/: cpp_cicd.yml  release.yml
src/: database.cpp  database.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  sql_statement.hpp  statement.hpp  table.cpp  table.hpp  utils.cpp  utils.hpp
test/: generator.py  syntax.md  test.sql  test_hmklil.sql  test_hmklil_expected.json  verify.py
test_cases/: large_test_ksazgm.sql
